# transcription

./: .env.example  .gitignore  DB拡張スキーマ.md  DEPLOY_STREAMLIT.md  README.md  Streamlit_Cloud_Oh_no_エラー調査.md  app.py  batch_process.py  check_status.py  database_schema.py  db_query.py  embedding_providers.py  open_db.py  open_db.sh  open_db_cli.py  open_db_v2.sh  packages.txt  pyproject.toml  requirements-cpu.txt  requirements.txt  requirements_app.txt  run_batch.sh  segment_postprocess.py  streamlit_vector_search_ui.py  summarize_transcript.py  summary_instruction.md  summary_rules.csv  torchaudio_compat.py  transcription_pg_search.py  youtube_utils.py  アプリ実行手順.md  アプリ設計案_概要.md  データベース開き方.md  データベース閲覧方法.md  バッチ処理実行手順.md  処理状況確認方法.md  実行手順.md  実装計画.md  技術構成.md  画面・機能仕様.md  (+1 more)
.streamlit/: config.toml
scripts/: apply_transcript_vector_table.py
sql/: pgvector_search_query_example.sql  qualitative_data_example.sql  vector_transcript_setup.sql  vector_transcript_setup_ollama.sql  ベクトルテーブル適用手順.txt
