[project]
name = "transcription-app"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
description = "WhisperX Streamlit app (uv overrides for PyAV / faster-whisper on Cloud)"

# Streamlit Cloud は先に `uv pip install` を実行する。
# whisperx が固定する faster-whisper==1.0.0 → av 11 はソースビルドになり、
# 新しい FFmpeg ヘッダと衝突（AV_OPT_TYPE_CHANNEL_LAYOUT 等）する。
# 以下で av 12（cp312 用ホイール）と faster-whisper 1.0.3 に上書きする。
# ctranslate2==4.4.0 の .so は executable stack 付きで、glibc 2.41+ の環境で
# 「cannot enable executable stack ... Invalid argument」になる（OpenNMT/CTranslate2 #1849）。
# 4.6 以降で -Wl,-z,noexecstack 修正が入ったビルドを使う。
#
# pyannote.audio 3.1.1（whisperx 依存）が torchaudio.set_audio_backend を参照するが、
# torchaudio 2.4+ で API 削除 → リポジトリの torchaudio_compat で補う。
# transformers 新系は PyTorch>=2.4 を要求するため、2.3 固定は「Disabling PyTorch」になる。
# 参考: https://github.com/pyannote/pyannote-audio/issues/1576
#
# NumPy 2.0 以降で np.NaN が削除され、pyannote.audio が class 定義で np.NaN を参照すると
# AttributeError（Inference 等）。numpy 1.x に固定する。
[tool.uv]
override-dependencies = [
    "faster-whisper==1.0.3",
    "av==12.3.0",
    "ctranslate2>=4.6.1,<5",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "numpy>=1.26,<2",
]
